Initial commit: Sudah menambahkan form rekam medis

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1,46 +1,9 @@
-{% extends "core/basecore.html" %}
+{% extends "core/base.html" %}
 {% load static %}
 
-{% block title %}Dashboard{% endblock %}
+<!-- {% block title %}Dashboard{% endblock %} -->
 
 {% block content %}
-<!-- Topnav -->
-<nav class="navbar navbar-top navbar-expand navbar-dark bg-default border-bottom">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Profile -->
-            <ul class="navbar-nav ml-auto">  <!-- Tambahkan ml-auto di sini -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="media align-items-center">
-                            <span class="avatar avatar-sm rounded-circle">
-                                <i class="ni ni-single-02"></i>
-                            </span>
-                            <div class="media-body ml-2 d-none d-lg-block">
-                                <span class="mb-0 text-sm font-weight-bold">
-                                    {{ request.user.get_full_name|default:request.user.username }}
-                                </span>
-                            </div>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <!-- <a href="#!" class="dropdown-item">
-                            <i class="ni ni-single-02"></i>
-                            <span>My profile</span>
-                        </a>
-                        <div class="dropdown-divider"></div> -->
-                        <a href="{% url 'logout' %}" class="dropdown-item">
-                            <i class="ni ni-user-run"></i>
-                            <span>Logout</span>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-            <!-- End Profile -->
-        </div>
-    </div>
-</nav>
-<!-- End Topnav -->
 <!-- Header -->
 <div class="header bg-default pb-6">
     <div class="container-fluid">
@@ -48,115 +11,31 @@
             <!-- Breadcrumb -->
             <div class="row align-items-center pt-4 pb-4">
                 <div class="col-lg-6 col-7">
-                    <h6 class="h2 text-white d-inline-block mb-0">Dashboard</h6>
+                    <h6 class="h2 text-secondary d-inline-block mb-0">
+                        {{ page_title|default:"Judul Halaman" }}
+                    </h6>
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                            <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                            <!-- <li class="breadcrumb-item active" aria-current="page">Tambah Pasien, Detail Pasien/ Registrasi/Rekam Medis</li> -->
+                            <li class="breadcrumb-item">
+                                <a href="{% url 'dashboard' %}"><i class="fa-solid fa-home text-secondary"></i></a>
+                            </li>
+                            {% if breadcrumbs %}
+                                {% for item in breadcrumbs %}
+                                    {% if forloop.last %}
+                                        <li class="breadcrumb-item active" aria-current="page">{{ item.title }}</li>
+                                    {% else %}
+                                        <li class="breadcrumb-item">
+                                            <a href="{{ item.url }}" class="text-secondary">{{ item.title }}</a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                <li class="breadcrumb-item active" aria-current="page">{{ page_title }}</li>
+                            {% endif %}
                         </ol>
                     </nav>
                 </div>
             </div>
-            <!-- End Breadcrumb -->
-
-            <!-- Card Stats -->
-            <div class="row">
-                <div class="col-xl-3 col-md-6">
-                    <div class="card card-stats">
-                        <!-- Card body 1 -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h5 class="card-title text-uppercase text-muted mb-0">Total Pasien</h5>
-                                    <span class="h2 font-weight-bold mb-0">...</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                                        <i class="ni ni-..."></i>
-                                        <!-- Sesuaikan Icon -->
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="mt-3 mb-0 text-sm">
-                                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> ...%</span>
-                                <span class="text-nowrap">Since last month</span>
-                            </p>
-                        </div>
-                        <!-- End Card body 1 -->
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="card card-stats">
-                        <!-- Card body 2 -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h5 class="card-title text-uppercase text-muted mb-0">Total Kunjungan</h5>
-                                    <span class="h2 font-weight-bold mb-0">...</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                                        <i class="ni ni-..."></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="mt-3 mb-0 text-sm">
-                                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> ...%</span>
-                                <span class="text-nowrap">Since last month</span>
-                            </p>
-                        </div>
-                        <!-- End Card body 2 -->
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="card card-stats">
-                        <!-- Card body 3 -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h5 class="card-title text-uppercase text-muted mb-0">Pasien Baru</h5>
-                                    <span class="h2 font-weight-bold mb-0">...</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                                        <i class="ni ni-..."></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="mt-3 mb-0 text-sm">
-                                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> ...%</span>
-                                <span class="text-nowrap">Since last month</span>
-                            </p>
-                        </div>
-                        <!-- End Card body 3 -->
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="card card-stats">
-                        <!-- Card body 4 -->
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <h5 class="card-title text-uppercase text-muted mb-0">Terserah asal make sense</h5>
-                                    <span class="h2 font-weight-bold mb-0">...</span>
-                                </div>
-                                <div class="col-auto">
-                                    <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
-                                        <i class="ni ni-chart-bar-32"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="mt-3 mb-0 text-sm">
-                                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> ...%</span>
-                                <span class="text-nowrap">Since last month</span>
-                            </p>
-                        </div>
-                        <!-- End Card body 4 -->
-                    </div>
-                </div>
-            </div>
-            <!-- End Card Stats -->
         </div>
     </div>
 </div>
@@ -172,20 +51,20 @@
                     <div class="row align-items-center">
                         <div class="col">
                             <h6 class="text-light text-uppercase ls-1 mb-1">Overview</h6>
-                            <h5 class="h3 mb-0">Sales value</h5>
+                            <h5 class="h3 mb-0">Jumlah Pasien</h5>
                         </div>
                         <div class="col">
                             <ul class="nav nav-pills justify-content-end">
-                                <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}' data-prefix="$" data-suffix="k">
+                                <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}'>
                                     <a href="#" class="nav-link py-2 px-3 active" data-toggle="tab">
-                                        <span class="d-none d-md-block">Month</span>
-                                        <span class="d-md-none">M</span>
+                                        <span class="d-none d-md-block">Bulan</span>
+                                        <span class="d-md-none">B</span>
                                     </a>
                                 </li>
-                                <li class="nav-item" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}' data-prefix="$" data-suffix="k">
+                                <li class="nav-item" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}'>
                                     <a href="#" class="nav-link py-2 px-3" data-toggle="tab">
-                                        <span class="d-none d-md-block">Week</span>
-                                        <span class="d-md-none">W</span>
+                                        <span class="d-none d-md-block">Minggu</span>
+                                        <span class="d-md-none">M</span>
                                     </a>
                                 </li>
                             </ul>
@@ -228,14 +107,40 @@
     <div class="row">
         <div class="col">
             <div class="card">
-                <!-- Card Header -->
                 <div class="card-header">
-                    <h3 class="mb-0">Daftar Registrasi</h3>
+                    <h3 class="mb-0">Antrian Registrasi</h3>
                 </div>
-                <!-- End Card Header -->
-                 <!-- DataTable List Antrian Registrasi -->
-                 <div class="table-responsive py-4">
-                    ...
+                <!-- DataTable List Antrian Registrasi -->
+                <div class="table-responsive py-3">
+                    <!-- <table class="table table-flush" id="datatable-basic"> -->
+                    <table id="datatable-basic" class="table table-flush table-striped">                         
+                        <thead class="thead-light">
+                            <tr>
+                                <th>No. Antri</th>
+                                <th>Nama Pasien</th>
+                                <th>Waktu Konsul</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in data_registrasi %}
+                            <tr>
+                                <td>{{ item.no_antrian }}</td>
+                                <td>{{ item.pasien.nama_lengkap }}</td>
+                                <td>{{ item.tanggal }}</td>
+                                <td>
+                                    {% if item.status == 'menunggu' %}
+                                        <span class="badge badge-warning">Menunggu</span>
+                                    {% elif item.status == 'selesai' %}
+                                        <span class="badge badge-success">Selesai</span>
+                                    {% elif item.status == 'batal' %}
+                                        <span class="badge badge-danger">Batal</span>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
                 <!-- End DataTable List Antrian Registrasi -->
             </div>
