--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "registration/baseregistration.html" %}
+{% extends "registration/base.html" %}
 {% load static %}
 
 {% block title %}Login{% endblock %}
